add missed changes